[package]
name = "trunc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.2"
log = "0.4.20"
strum = "0.25.0"
strum_macros = "0.25.3"
# async-std (no TLS)
sqlx = { version = "0.7.3", features = [ "runtime-async-std", "postgres", "time" ] }
async-std = { version = "1.12.0", features = ["attributes"] }
serde = {version = "1.0.195", features = ["derive"]}
time = "0.3.31"


